Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002-2010 Simon Josefsson
See the end for copying conditions.

* Version 1.19 (unreleased) [?]

** doc: Fix typos etc.

** build: Update gnulib files.

** build: Use valgrind -q to reduce verbosity.

** API and ABI is backwards compatible with the previous version.

* Version 1.18 (released 2010-02-15) [stable]

** libidn: Put forgotten symbols under old namespace.
Reverts one unnecessary change introduced in 1.17.  Suggested by Marco
d'Itri <md@linux.it>.

** API and ABI is backwards compatible with the previous version.

* Version 1.17 (released 2010-02-05) [alpha]

** libidn: Fix symbol export problem for a few variables.
Applications (that use these rarely used variables) built against
versions before 1.13 did not work with libidn versions 1.13 to 1.16.

Symbol versioning was introduced in version 1.13 but by accident some
symbols that were visible before that release were not exported, and
the consequence was that those symbols were not available in version
1.13 to 1.16.  This release fixes the problem, so the symbols are
visible again, making this release backwards compatible with all
earlier releases.

The affected symbols are the following variables:
stringprep_iscsi_prohibit, stringprep_rfc3454_A_1,
stringprep_rfc3454_B_1, stringprep_rfc3454_B_2,
stringprep_rfc3454_B_3, stringprep_rfc3454_C_1_1,
stringprep_rfc3454_C_1_2, stringprep_rfc3454_C_2_1,
stringprep_rfc3454_C_2_2, stringprep_rfc3454_C_3,
stringprep_rfc3454_C_4, stringprep_rfc3454_C_5,
stringprep_rfc3454_C_6, stringprep_rfc3454_C_7,
stringprep_rfc3454_C_8, stringprep_rfc3454_C_9,
stringprep_rfc3454_D_1, stringprep_rfc3454_D_2,
stringprep_saslprep_space_map.

Thanks to Marco d'Itri <md@linux.it> for reporting
<http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=561291> that led to
discovering this problem.

** Really fix the link error of self-tests on MinGW.
