@@ -1,6 +1,6 @@
 --- gendocs_template.orig	2007-05-31 12:01:54.000000000 +0200
 +++ gendocs_template	2007-05-31 12:01:40.000000000 +0200
-@@ -41,6 +41,27 @@
+@@ -41,6 +41,28 @@
      (%%TEXI_TGZ_SIZE%%K bytes gzipped tar file).</a></li>
  </ul>
  
@@ -15,6 +15,7 @@
 +<p>
 +<ul>
 +  <li><a href="../reference/ch01.html">GTK-DOC HTML C/C++ API Reference Manual</a>.
++  <li><a href="../reference/%%PACKAGE%%.pdf">PDF Reference API Manual (GTK-DOC)</a>.
 +  <li><a href="../reference/libidn.devhelp">GTK-DOC DevHelp C/C++ API Reference Manual</a>.
 +</ul>
 +
